--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -39,7 +39,7 @@ jobs:
         env:
           SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
         run: npx eslint .
-          --config azure-sa/eslint.config.mjs
+          --config src/azure-sa/eslint.config.mjs
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
