--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -15,8 +15,6 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
-  schedule:
-    - cron: '23 5 * * 3'
 
 jobs:
   eslint:
@@ -39,7 +37,7 @@ jobs:
         env:
           SARIF_ESLINT_IGNORE_SUPPRESSED: "true"
         run: npx eslint .
-          --config eslint.config.mjs
+          --config pipeline/eslint.config.mjs
           --format @microsoft/eslint-formatter-sarif
           --output-file eslint-results.sarif
         continue-on-error: true
