--- a/src/azure-sa/package.json
+++ b/src/azure-sa/package.json
@@ -4,12 +4,14 @@
   "description": "FileVault application using Azure Blob Storage",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "mocha"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mocha": "^11.0.1",
     "multer": "^1.4.2"
   }
 }
