Improved dockerfile caching

--- a/src/azure-sa/Dockerfile
+++ b/src/azure-sa/Dockerfile
@@ -1,9 +1,12 @@
 FROM node:20-alpine
 WORKDIR /usr/src/app
 
+# Improve cache by installing dependencies first
+COPY package.json package-lock.json ./
+RUN npm install 
+
 # Copy in source code
 COPY . .
-RUN npm install
 EXPOSE 3000
 
 CMD ["node", "index.js"]
