--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,2 +1,3 @@
 [testvms]
 172.176.223.197 ansible_user=azureuser ansible_password=*** ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+20.22.197.182 ansible_user=azureuser ansible_password=*** ansible_ssh_common_args='-o StrictHostKeyChecking=no'
