--- a/.github/workflows/main_filevault-webapp.yml
+++ b/.github/workflows/main_filevault-webapp.yml
@@ -32,7 +32,7 @@ jobs:
         push: true
         tags: filevaultacr.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_46abcba7c2db48fb88fac9c831dae229 }}/filevault:${{ github.sha }}
         context: ./src/azure-sa
-        file: ./Dockerfile
+        file: ./src/azure-sa/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
