--- a/.github/workflows/main_filevault-webapp.yml
+++ b/.github/workflows/main_filevault-webapp.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         push: true
         tags: filevaultacr.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_46abcba7c2db48fb88fac9c831dae229 }}/filevault:${{ github.sha }}
-        context: ./src/azure-sa
+        path: ./src/azure-sa
         file: ./src/azure-sa/Dockerfile
 
   deploy:
