--- a/.github/workflows/main_filevault-webapp.yml
+++ b/.github/workflows/main_filevault-webapp.yml
@@ -16,6 +16,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Azure login
+      uses: azure/login@v2
+      with:
+        auth-type: IDENTITY
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        enable-AzPSSession: true
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
