--- a/.github/workflows/az-login.yml
+++ b/.github/workflows/az-login.yml
@@ -4,6 +4,7 @@ on:
     push:
       branches:
         - main
+        - keyvault # remove this before merging
     workflow_dispatch:
 
 permissions:
