--- a/.github/workflows/az-login.yml
+++ b/.github/workflows/az-login.yml
@@ -13,6 +13,8 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: 'production'
     steps:
       - name: Azure login
         uses: azure/login@v2
