--- a/src/azure-sa/prometheus.yml
+++ b/src/azure-sa/prometheus.yml
@@ -1,18 +1,31 @@
 global:
   scrape_interval: 15s
+  evaluation_interval: 15s
+
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+    scrape_interval: 5s
 
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter:9100']
+    scrape_interval: 5s
 
+# Not sure this is meant to be here as nothing configured?
   - job_name: 'filevault'
     static_configs:
       - targets: ['localhost:3000']
+    scrape_interval: 5s
+
+  - job_name: cadvisor
+    static_configs:
+      - targets: ['cadvisor:8080']
+    scrape_interval: 5s
+
+      
 
 remote_write:
   - url: '__PrometheusUrl__'
