--- a/src/azure-sa/package.json
+++ b/src/azure-sa/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.6.0",
     "express": "^4.21.2",
     "mocha": "^11.0.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "winston": "^3.17.0"
   }
 }
