Added system module to metricbeat.yml

--- a/src/azure-sa/metricbeat.yml
+++ b/src/azure-sa/metricbeat.yml
@@ -42,6 +42,22 @@ metricbeat.modules:
   period: 10s
   enabled: true
 
+- module: system
+  metricsets:
+    - cpu             # CPU usage
+    - load            # CPU load averages
+    - memory          # Memory usage
+    - network         # Network IO
+    - process         # Per process metrics
+    - process_summary # Process summary
+    - uptime          # System Uptime
+    - socket_summary  # Socket summary
+  enabled: true
+  period: 10s
+  processes: ['.*']
+  cpu.metrics:  ["percentages","normalized_percentages"]  # The other available option is ticks.
+  core.metrics: ["percentages"]  # The other available option is ticks.
+
 processors:
   - add_host_metadata: ~
   - add_docker_metadata: ~
