Added action job to create .env file

--- a/.github/workflows/main_filevault-webapp.yml
+++ b/.github/workflows/main_filevault-webapp.yml
@@ -29,6 +29,14 @@ jobs:
         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+    - name: Create .env file
+      run: |
+        touch .env
+        echo AZURE_STORAGE_ACCOUNT_NAME=${{ secrets.AZURE_STORAGE_ACCOUNT_NAME }} >> .env
+        echo AZURE_STORAGE_ACCOUNT_KEY=${{ secrets.AZURE_STORAGE_ACCOUNT_KEY }} >> .env
+        echo AZURE_CONTAINER_NAME=${{ secrets.AZURE_CONTAINER_NAME }} >> .env
+        echo PORT=${{ secrets.PORT }} >> .env
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
