--- a/src/azure-sa/compose.yaml
+++ b/src/azure-sa/compose.yaml
@@ -35,6 +35,26 @@ services:
       - elastic
     depends_on:
       - logstash01
+
+  nginx:
+    image: nginx:1-alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/logs:/var/log/nginx
+    networks:
+      - elastic
+    depends_on:
+      - web
+      - logstash01
+    restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
   
   node-exporter:
     image: prom/node-exporter:latest
@@ -297,6 +317,10 @@ services:
       - "./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro"
       - "/var/lib/docker/containers:/var/lib/docker/containers:ro"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./nginx/logs/:/usr/share/filebeat/ingest_data/nginx/"
+      - "./nginx/logs/access.json:/usr/share/filebeat/ingest_data/nginx/access.json"
+      - "./nginx/logs/error.log:/usr/share/filebeat/ingest_data/nginx/error.log"
+
     env_file:
       - path: ".env"
         required: true
