--- a/src/azure-sa/logstash.conf
+++ b/src/azure-sa/logstash.conf
@@ -34,25 +34,25 @@ input {
 }
 
 filter {
-  if [event.dataset] =~ "nginx" {
-    json {
-      source => "message"
-      target => "nginx"
-    }
-    date {
-      match => [ "[nginx][timestamp]", "ISO8601" ]
-      target => "@timestamp"
-    }
-  }
+  # if [event.dataset] =~ "nginx" {
+  #   json {
+  #     source => "message"
+  #     target => "nginx"
+  #   }
+  #   date {
+  #     match => [ "[nginx][timestamp]", "ISO8601" ]
+  #     target => "@timestamp"
+  #   }
+  # }
 }
 
 output {
   elasticsearch {
+    index => "nginx-logs-%{+YYYY.MM.dd}"
     hosts=> "${ELASTIC_HOSTS}"
-    ssl => true
-    cacert=> "certs/ca/ca.crt"
     user => "${ELASTIC_USER}"
     password => "${ELASTIC_PASSWORD}"
-    index => "nginx-logs-%{+YYYY.MM.dd}"
+    cacert=> "certs/ca/ca.crt"
+    data_stream => "false"
   }
 }
