--- a/src/azure-sa/filebeat.yml
+++ b/src/azure-sa/filebeat.yml
@@ -1,23 +1,27 @@
+logging.to_files: false
+logging.to_stderr: true
+logging.level: debug
+
 filebeat.inputs:
-# - type: log
-#   enabled: true
-#   paths:
-#     - /var/lib/docker/containers/*/*.log
-#     - /usr/share/filebeat/ingest_data/nginx/access.json
-#     - /usr/share/filebeat/ingest_data/nginx/error.log
-#   json.keys_under_root: true
-#   json.add_error_key: true
 - type: filestream
+  enabled: true
   id: default-filestream
+  take_over: true
   paths:
-    - /usr/share/filebeat/ingest_data/nginx/*
-    # - /usr/share/filebeat/ingest_data/nginx/access.json
+    # - /usr/share/filebeat/ingest_data/nginx/*
+    - /usr/share/filebeat/ingest_data/nginx/access.json
     # - ingest_data/nginx/access.json
     # - ingest_data/*.log
+  parsers:
+    - ndjson:
+        keys_under_root: true
+        # add_error_key: true
 
-processors:
-  - add_docker_metadata:
-      host: "unix:///var/run/docker.sock"
+# processors:
+#   - add_docker_metadata:
+#       host: "unix:///var/run/docker.sock"
 
 output.logstash:
-  hosts: ${LOGSTASH_HOSTS}
+  hosts: "logstash01:5044"
+  # hosts: ${LOGSTASH_HOSTS}
+  
