--- a/src/azure-sa/compose.yaml
+++ b/src/azure-sa/compose.yaml
@@ -316,7 +316,7 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
       - ELASTIC_HOSTS=https://es01:9200
       - KIBANA_HOSTS=http://kibana:5601
-      - LOGSTASH_HOSTS=http://logstash01:5044
+      - LOGSTASH_HOSTS=logstash01:5044
     command:
       - --strict.perms=false
 
