--- a/src/azure-sa/filebeat.yml
+++ b/src/azure-sa/filebeat.yml
@@ -8,20 +8,14 @@ filebeat.inputs:
   id: default-filestream
   take_over: true
   paths:
-    # - /usr/share/filebeat/ingest_data/nginx/*
     - /usr/share/filebeat/ingest_data/nginx/access.json
-    # - ingest_data/nginx/access.json
-    # - ingest_data/*.log
   parsers:
     - ndjson:
         keys_under_root: true
-        # add_error_key: true
 
-# processors:
-#   - add_docker_metadata:
-#       host: "unix:///var/run/docker.sock"
+processors:
+  - add_docker_metadata:
+      host: "unix:///var/run/docker.sock"
 
 output.logstash:
-  hosts: "logstash01:5044"
-  # hosts: ${LOGSTASH_HOSTS}
-  
+  hosts: ${LOGSTASH_HOSTS}
