--- a/src/azure-sa/compose.yaml
+++ b/src/azure-sa/compose.yaml
@@ -104,6 +104,13 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
+    env_file:
+      - path: ".env"
+        required: true
+    environment: # this doesn't work?
+      - PROMETHEUS_URL=${PROMETHEUS_URL}
+      - PROMETHEUS_USERNAME=${PROMETHEUS_USERNAME}
+      - PROMETHEUS_PASSWORD=${PROMETHEUS_PASSWORD}
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -117,9 +124,6 @@ services:
     depends_on:
       - cadvisor
       - node-exporter
-    env_file:
-      - path: ".env"
-        required: true
 
   setup:
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
