--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -6,9 +6,14 @@ on:
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the webapplication
+    name: Scan the web application
     steps:
-      - name: ZAP Scan
+      - name: Baseline ZAP Scan
         uses: zaproxy/action-baseline@v0.14.0
         with:
           target: 'https://filevault-webapp-fhh5e4fje0avcwhq.westus2-01.azurewebsites.net'
+
+      - name: Full ZAP Scan
+        uses: zaproxy/action-full-scan@v0.12.0
+        with:
+          target: 'https://www.zaproxy.org/'
