--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -10,11 +10,10 @@
 name: Linting
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ "main" ]
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   eslint:
