--- a/.github/workflows/main_filevault-webapp.yml
+++ b/.github/workflows/main_filevault-webapp.yml
@@ -4,10 +4,8 @@
 name: Build and deploy container app to Azure Web App - filevault-webapp
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   build:
