--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -29,11 +29,10 @@
 name: SonarCloud analysis
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
+  workflow_call:
 
 permissions:
   pull-requests: read # allows SonarCloud to decorate PRs with analysis results
