--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,10 @@
 name: Testing
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
     branches: [ "main" ]
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   unit-tests:
