Removed feature branch from triggers

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -2,7 +2,7 @@ name: Deployment pipeline
 
 on:
     push:
-        branches: [ "main", "deployment-pipeline" ]
+        branches: [ "main" ]
     workflow_dispatch:
 
 jobs:
