--- a/src/azure-sa/package.json
+++ b/src/azure-sa/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.2",
     "mocha": "^11.0.1",
     "multer": "^1.4.4",
+    "prom-client": "^15.1.3",
     "winston": "^3.17.0"
   }
 }
