--- a/src/azure-sa/compose.yaml
+++ b/src/azure-sa/compose.yaml
@@ -32,6 +32,7 @@ services:
         required: false
     networks:
       - elastic
+      - monitoring
     depends_on:
       - logstash01
 
@@ -119,6 +120,8 @@ services:
       - '--web.enable-lifecycle'
     expose:
       - 9090
+    ports:
+      - "9090:9090"
     networks:
       - monitoring
     depends_on:
